--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
+<dependency>
   <groupId>mysql</groupId>
   <artifactId>mysql-connector-java</artifactId>
+  <version>8.0.33</version>
   <scope>runtime</scope>
 </dependency>
+
 
 <dependency>
     <groupId>org.springframework.boot</groupId>
